test/samples/invalid/never_terminator.maruir
fun foo(a: u256)
{
entry:
	return;
}

fun boo(): never {
	entry:
		call foo(0_u256);
}
